# RDCVC

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  train_cvcnet-cuda.py
.devcontainer/: Dockerfile  README.md  devcontainer.json
ref/: CRITIC.xlsx  Multi-Layer Perceptron, MNIST.ipynb  README.md  TrainTrace.xlsx  dampers.json  prepare_optimizer.drawio  同步计算结果实例.json5  演化算法概述.md
ref/UML/: ClassDiagram.puml
ref/mlp-pytorch-classifier/: main.py
ref/model/: ple.py  ple_multi_layer_tf.py  ple_multi_layer_torch.py
src/: __init__.py
src/IoTdamper/: README.md
src/IoTdamper/doc/: ANNdataflow.drawio  IoTDamperNN.md  物联网风阀风量预测神经网络用例.docx
src/IoTdamper/scripts/: AnalysisIoTDamper.ipynb  convert_onnx.py  convert_scalers_dict.py  integrate_data.ipynb  integrate_data.py  release.py  release_onnx.ipynb  show_model.py
src/RDCVC/models/optimization/GA/MNSGA31/: CRITIC.py  MyProblem.py  run.py
src/RDCVC/models/optimization/GA/SN1/: MyProblem.py  pop_history.py  run.py
src/RDCVC/models/optimization/GA/problems/: entry.py  moea_api_ALL_FreqSVolPres_TEVolTSVol.py  rdc_moea_FreqRPres_0.py  soea_nn_ALL_FreqPres_Pres.py  soea_nn_ALL_PresRMSE_TSV.py  soea_nn_normal.py
src/RDCVC/models/optimization/GA/problems/archive/: moea_api_ALL_FreqRPres_TEVolTSVol.py  moea_api_ALL_RPres_TSVolTEVol.py  moea_api_ALL_RSVol_TEVolTSVol.py  soea_api_ALL_Pres_TEVTSV.py  soea_nn_ALL_PresRMSE_TSV.py
src/RDCVC/models/optimization/GA/run/: run_soea_DE_best_1_L.py  run_soea_SEGA.py  run_soea_template.py
src/RDCVC/models/optimization/GA/testbd/: test.py
src/RDCVC/models/optimization/utils/: APIError.py  Args.py  DampersProcessor.py  DataProcessor.py  GARunner.py  utils.py
src/RDCVC/models/prediciton/CVCNet/: README.md
src/RDCVC/models/prediciton/CVCNet/configs/: NN_train.run.xml  config.yml
src/RDCVC/models/prediciton/CVCNet/datasets/: cvcnet_dataset.py  data_entry.py  iotdp_dataset.py  rdcvc_dataset.py
src/RDCVC/models/prediciton/CVCNet/models/: CVCNet.py  IoTDamper_mlp.py  base_mtl.py  base_mtl_kane.py  cvcnet.py  dense.py  kan_efficient.py  mlp.py  mmoe.py  model_entry.py  ple_single_layer_torch.py  shared_bottom.py  split.py  submodules.py
src/RDCVC/models/prediciton/CVCNet/test/: _test.py  test.py
src/RDCVC/models/prediciton/CVCNet/utils/: early_stoper.py  evaluator.py  logger.py  metrics_computer.py  model_executor.py  myutils.py  neural_network_model.py  options.py  scaler.py  scheduler.py  standard_scaler_torch.py  torch_utils.py  trainer.py  viz.py
src/RDCVC/models/prediciton/LinerRegression/: mth_MOR.ipynb
src/RDCVC/models/prediciton/Others/: mth_KNN.ipynb  mth_SVR.ipynb  mth_mlp.ipynb
src/RDCVC/models/prediciton/TreeMethod/: _mth_XGBoost.ipynb  _mth_XGBoost_grid.ipynb  mth_DecisionTree.ipynb  mth_RandomForest.ipynb  mth_XGBoost.ipynb
src/RDCVC/notebooks/: DWA.ipynb  Plot.ipynb  cleanroom_graph.ipynb  model_test.ipynb  mth_MOR.ipynb  mth_XGBoost.ipynb  mth_XGBoost_grid.ipynb  rdc_datacleaning.ipynb  torch_cuda.ipynb
src/RDCVC/scripts/: IoTDamperNN_infer_once.py  autocommit.bash  find_best_model.py  nn_infer.py  optimize_GA.py  test_batch.py  test_once.py  train_cvcnet-cuda.py  train_grid.py
src/RDCVC/scripts/api/: AirductContext.java  test_api.ipynb
src/RDCVC/scripts/archived/: GA_run.ps1  GA_run.release.ps1  NN_test.ps1  NN_train.ps1  RDCleanroom_lhs.py  README.md  RELEASE.ps1  bim_run_once.py  compute_supply_volume.py  convert_onnx.py  convert_scalers_dict.py  experiment_data_read.py  generate_bim_data.py  generate_data_sinx.py  generate_data_sinx_2.py  generate_samples_old.py  operate_excel.py  plot_TSV.py  plot_pres.py  shoot.py  tensorboardX.ps1
src/RDCVC/utils/: Ploter.py  SQLiteManager.py  datasets.py  dpgd.py  metrics.py  myUtils.py
src/tests/RDCVC/: test_StandardScaler_torch.py  test_cvcnet.py  test_dpgd.py  test_mmoe.py  test_multi-layer_mmoe.py
src/tests/others/: test_DampersProcessor.py  test_DampersProcessor_run_once.py  test_db.py  test_db_boost.py  test_torch_cuda.py
